Fix description overflow on mobile

--- a/src/MainDisplay.css
+++ b/src/MainDisplay.css
@@ -762,8 +762,9 @@ details summary {
   }
 
   .AppDetails .details {
-    width: 100%;
-    margin-left: 0px;
+    width: 90vw;
+    margin: 0;
+    overflow-wrap: break-word;
   }
 
   .screen_container {
